--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.2.1",
+    "react-github-calendar": "^3.2.2",
+    "react-icons": "^4.8.0",
+    "react-parallax-tilt": "^1.7.42",
+    "react-pdf": "^5.7.1",
+    "react-router-dom": "^6.2.2",
+    "react-tsparticles": "^1.43.1",
+    "typewriter-effect": "^2.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
