changes in libs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-app",
+  "name": "my-blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,10 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+	"react-github-calendar": "^3.2.2",
+    "react-parallax-tilt": "^1.7.42",
+    "typewriter-effect": "^2.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
