--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-pdf": "^7.0.0",
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
+    "moment": "^2.30.1",
     "pdfjs-dist": "^4.0.379",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
