--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@googlemaps/markerclusterer": "^2.5.3",
     "@mui/material": "^6.4.1",
     "@react-google-maps/api": "^2.20.5",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@react-pdf/renderer": "^3.3.8",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,7 +23,7 @@
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
     "moment": "^2.30.1",
-    "pdfjs-dist": "^4.10.38",
+    "pdfjs-dist": "^3.11.174",
     "prettier": "^3.0.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
