--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-pdf": "^9.2.1",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "vite-plugin-ssr": "^0.4.142",
+    "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
