--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.7.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "fa": "^1.0.1",
-    "pdfjs-dist": "^5.1.91",
+    "pdfjs-dist": "^2.15.349",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -21,7 +23,7 @@
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
     "react-simple-typewriter": "^5.0.1",
-    "vite-plugin-ssr": "^0.4.142",
+       "vite-plugin-ssr": "^0.4.142",
     "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
