--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@react-pdf-viewer/core": "^3.7.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "bootstrap": "^5.3.5",
@@ -19,11 +20,12 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
     "react-simple-typewriter": "^5.0.1",
-       "vite-plugin-ssr": "^0.4.142",
+    "vite-plugin-ssr": "^0.4.142",
     "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
